--- a/WebParking2025/appsettings.json
+++ b/WebParking2025/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=AMARKAS;Initial Catalog=Parkingapp;Integrated Security=True;Pooling=False;Encrypt=False;Trust Server Certificate=True"
+  }
 }
