Added login,updated models

--- a/WebParking2025/appsettings.json
+++ b/WebParking2025/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-
   "ConnectionStrings": {
-    "DefaultConnectionString": "Data Source=AMARKAS;Initial Catalog=Parkingapp;Integrated Security=True;Pooling=False;Encrypt=False;Trust Server Certificate=True"
+    "DefaultConnectionString": "Data Source=AMARKAS;Initial Catalog=Parkingapp;Integrated Security=True;Pooling=False;Encrypt=False;Trust Server Certificate=True",
+    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=WebParking2025;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
