--- a/WebParking2025/appsettings.json
+++ b/WebParking2025/appsettings.json
@@ -1,8 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+
+    "ConnectionStrings": {
+        "DefaultConnectionString": "Data Source=DESKTOP-EP1QSGE;Initial Catalog=Parking;Integrated Security=True;Trust Server Certificate=True"
     }
   },
   "AllowedHosts": "*",
@@ -10,4 +16,5 @@
     "DefaultConnectionString": "Data Source=AMARKAS;Initial Catalog=Parkingapp;Integrated Security=True;Pooling=False;Encrypt=False;Trust Server Certificate=True",
     "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=WebParking2025;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
+
 }
